--- a/WCSTrainer/Pages/Skills/Assign.cshtml
+++ b/WCSTrainer/Pages/Skills/Assign.cshtml
@@ -43,7 +43,7 @@
                         <div class="form-group">
                            <div class="form">
                               <div class="btn-container">
-                                 <input type="submit" value="Save" class="btn bg-btn btnGreen" />
+                                 <input type="submit" value="Assign" class="btn bg-btn btnGreen" />
                               </div>
                            </div>
                         </div>
