--- a/WCSTrainer/Pages/Shared/RazorComponents/Person.razor
+++ b/WCSTrainer/Pages/Shared/RazorComponents/Person.razor
@@ -34,7 +34,7 @@
       <div class="info">
          @foreach (var order in employee.TrainingOrdersAsTrainee.OrderBy(o => o.Archived || o.Status != "Active")) {
             var cssClass = order.Archived || order.Status != "Active" ? "pill inactive" : "pill";
-            <a href="/TrainingOrders/Details?id=@order.Id" class="@cssClass">Order #@order.Id</a>
+            <a href="/TrainingOrders/Details?id=@order.Id" class="@cssClass">TO #@order.Id</a>
          }
       </div>
    </div>
@@ -43,7 +43,7 @@
       <div class="info">
          @foreach (var order in employee.TrainingOrdersAsTrainer.OrderBy(o => o.Archived || o.Status != "Active")) {
             var cssClass = order.Archived || order.Status != "Active" ? "pill inactive" : "pill";
-            <a href="/TrainingOrders/Details?id=@order.Id" class="@cssClass">Order #@order.Id</a>
+            <a href="/TrainingOrders/Details?id=@order.Id" class="@cssClass">TO #@order.Id</a>
          }
       </div>
    </div>
