--- a/WCSTrainer/Pages/Locations/Create.cshtml
+++ b/WCSTrainer/Pages/Locations/Create.cshtml
@@ -1,10 +1,6 @@
 ﻿@page
 @model WCSTrainer.Pages.Locations.CreateModel
 
-@{
-   ViewData["Title"] = "Create";
-}
-
 <div class="panel">
    <div class="body">
       <partial name="_Sidebar" />
@@ -15,7 +11,6 @@
             <div class="field-container">
                <form method="post">
                   <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                  <input hidden asp-for="Location.Id" />
                   <div class="form-group">
                      <div class="form">
                         <div class="labels">
@@ -26,7 +21,7 @@
                      </div>
                   </div>
                   <div class="form-group">
-                     <input type="submit" value="Save" class="btn bg-btn btnGreen" />
+                     <input type="submit" value="Create" class="btn bg-btn btnGreen" />
                   </div>
                </form>
             </div>
