--- a/WCSTrainer/Pages/Skills/Create.cshtml
+++ b/WCSTrainer/Pages/Skills/Create.cshtml
@@ -15,7 +15,6 @@
             <div class="field-container">
                <form method="post">
                   <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                  <input hidden asp-for="Skill.Id" />
                   <div class="form-group"> 
                      <div class="form">
                         <div class="labels">
@@ -37,10 +36,10 @@
                   <div class="form-group">
                      <div class="form">
                         <div class="labels">
-                           <label asp-for="@Model.LessonString" class="control-label"></label>
+                           <p class="control-label">Lesson</p>
                            <span asp-validation-for="@Model.LessonString" class="text-danger"></span>
                         </div>
-                        <input asp-for="@Model.LessonString" class="form-control" />
+                        <select asp-for="@Model.LessonString" class="form-control" asp-items="@Model.LessonSelectList"></select>
                      </div>
                   </div>
                   <div class="form-group">
