--- a/WCSTrainer/Pages/Lessons/Create.cshtml
+++ b/WCSTrainer/Pages/Lessons/Create.cshtml
@@ -5,10 +5,6 @@
 @inject SignInManager<UserAccount> SignInManager
 @inject UserManager<UserAccount> UserManager
 
-@{
-    ViewData["Title"] = "Create";
-}
-
 <div class="panel">
    <div class="body">
       <partial name="_Sidebar" />
@@ -40,6 +36,15 @@
                               </div>
                               <textarea rows="5" asp-for="Lesson.Description" placeholder="Describe the steps needed to complete this lesson." >
                               </textarea>
+                           </div>
+                        </div>
+                        <div class="form-group">
+                           <div class="form">
+                              <article>
+                                 Labels
+                              </article>
+                              <input asp-action="stop"/>
+
                            </div>
                         </div>
                         <div class="form-group">
