--- a/WCSTrainer/Pages/Skills/Create.cshtml
+++ b/WCSTrainer/Pages/Skills/Create.cshtml
@@ -43,7 +43,7 @@
                      </div>
                   </div>
                   <div class="form-group">
-                     <input type="submit" value="Save" class="btn bg-btn btnGreen" />
+                     <input type="submit" value="Create" class="btn bg-btn btnGreen" />
                   </div>
                </form>
             </div>
