--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -46,54 +46,52 @@
                            int itemCount = 0;
                         }
                         @foreach (var item in Model.TrainingOrder.Reverse()) {
-                           if (user.Employee != null) {
-                              if (!TrainingOrderHelper.orderInvolves(UserManager, User, user.Employee, item)) {
-                                 continue;
-                              }
-                              string name;
-                              if (item.Trainee != null) {
-                                 name = item.Trainee.FirstName + " " + item.Trainee.LastName;
-                              } else {
-                                 name = "N/A";
-                              }
-                              <li id="@item.Id" class="@item.Status @(item.Archived ? "Archived" : "") searchable"
-                                  data-name="@name" style="display: @(itemCount < Model.maxCount ? "flex" : "none");">
-                                 <div class="info">
-                                    <div class="title">
-                                       <a class="name" asp-page="./Details" asp-route-id="@item.Id">Training Order #@item.Id</a>
+                           if (TrainingOrderHelper.OrderInvolves(UserManager, User, item).Result == false) {
+                              continue;
+                           }
+                           string name;
+                           if (item.Trainee != null) {
+                              name = item.Trainee.FirstName + " " + item.Trainee.LastName;
+                           } else {
+                              name = "N/A";
+                           }
+                           <li id="@item.Id" class="@item.Status @(item.Archived ? "Archived" : "") searchable"
+                               data-name="@name" style="display: @(itemCount < Model.maxCount ? "flex" : "none");">
+                              <div class="info">
+                                 <div class="title">
+                                    <a class="name" asp-page="./Details" asp-route-id="@item.Id">Training Order #@item.Id</a>
+                                    @{
+                                       var type = "awaiting";
+                                       if (item.Status.Equals("Active")) {
+                                          type = "active";
+                                       } else if (item.Status.Equals("Verified")) {
+                                          type = "verified";
+                                       } else if (item.Status.Equals("Completed")) {
+                                          type = "completed";
+                                       }
+                                       <p class="@type black-pill">@item.Status</p>
+                                       if (item.Archived == true) {
+                                          <p class="archived black-pill">Archived</p>
+                                       }
+                                    }
+                                 </div>
+                                 <div class="sub">
+                                    <div class="sub-text">
+                                       <p class="identifier">Trainee - @name</p>
+                                    </div>
+                                    <div class="btns">
+                                       <a class="btn bg-btn btnWhite" asp-page="./Details" asp-route-id="@item.Id">View</a>
                                        @{
-                                          var type = "awaiting";
-                                          if (item.Status.Equals("Active")) {
-                                             type = "active";
-                                          } else if (item.Status.Equals("Verified")) {
-                                             type = "verified";
-                                          } else if (item.Status.Equals("Completed")) {
-                                             type = "completed";
-                                          }
-                                          <p class="@type black-pill">@item.Status</p>
-                                          if (item.Archived == true) {
-                                             <p class="archived black-pill">Archived</p>
+                                          var isOwner = await UserManager.IsInRoleAsync(user, "owner");
+                                          if (isOwner) {
+                                             <a class="btn bg-btn btnRed" onclick="openModal(@item.Id)">Delete</a>
                                           }
                                        }
                                     </div>
-                                    <div class="sub">
-                                       <div class="sub-text">
-                                          <p class="identifier">Trainee - @name</p>
-                                       </div>
-                                       <div class="btns">
-                                          <a class="btn bg-btn btnWhite" asp-page="./Details" asp-route-id="@item.Id">View</a>
-                                          @{
-                                             var isOwner = await UserManager.IsInRoleAsync(user, "owner");
-                                             if (isOwner) {
-                                                <a class="btn bg-btn btnRed" onclick="openModal(@item.Id)">Delete</a>
-                                             }
-                                          }
-                                       </div>
-                                    </div>
                                  </div>
-                              </li>
-                              itemCount++;
-                           }
+                              </div>
+                           </li>
+                           itemCount++;
                         }
                      </ul>
                   </div>
