--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -298,6 +298,7 @@ nav {
 
 							.panel .body .properties .user-form .field-container .form-group .form .labels .control-label {
 
+
 							}
 
 							.panel .body .properties .user-form .field-container .form-group .form .labels .text-danger {
@@ -311,6 +312,7 @@ nav {
 						background: var(--black);
 						color: var(--textMain);
 						border: 1px solid var(--gray4);
+
 					}
 
 					.panel .body .properties .user-form .field-container .form-group textarea {
@@ -353,15 +355,16 @@ nav {
 					}
 
 
-					.panel .body .properties .user-form .field-container .form-group .selector {
-					}
+				.panel .body .properties .user-form .field-container .form-group .selector {
+					
+				}
 
 				.panel .body .properties .user-form .field-container .btn {
 					font-size: 15px;
 					padding: 5px 10px;
 					min-width: fit-content;
 					height: fit-content;
-					align-self: flex-end;
+					align-self: flex-start;
 				}
 
 				.panel .body .properties .user-form .field-container .title-row {
