skill revamp part 2

--- a/WCSTrainer/Pages/Shared/RazorComponents/Person.razor
+++ b/WCSTrainer/Pages/Shared/RazorComponents/Person.razor
@@ -46,7 +46,7 @@
                                     } else if (order.Status.Equals("Completed")) {
                                        type = "completed";
                                     }
-                                    <p class="@type">⬤</p>
+                                    <p class="@type dot">⬤</p>
                                  }
                               </div>
                            }
