--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -312,7 +312,14 @@ nav {
 						background: var(--black);
 						color: var(--textMain);
 						border: 1px solid var(--gray4);
+					}
 
+					.panel .body .properties .user-form .field-container .form-group .multi-select {
+						border: none;
+						width: 100%;
+						background: var(--black);
+						color: var(--textMain);
+						border: 1px solid var(--gray4);
 					}
 
 					.panel .body .properties .user-form .field-container .form-group textarea {
@@ -404,7 +411,7 @@ nav {
 
 					.panel .body .properties .user-form .field-container .text-group .info .skills-container {
 						display: flex;
-						gap: 10px;
+						gap: 5px;
 						flex-wrap: wrap;
 					}
 
@@ -413,13 +420,11 @@ nav {
 							display: flex;
 							gap: 5px;
 							flex-direction: column;
-							justify-content: center;
-							width: 100px;
+							width: fit-content;
 							border: 1px solid var(--gray4);
 						}
 
 							.panel .body .properties .user-form .skill-box .title-container {
-								width: 100%;
 							}
 
 								.panel .body .properties .user-form .skill-box .title-container .skill-title {
@@ -428,7 +433,7 @@ nav {
 									font-weight: 500;
 									display: flex;
 									justify-content: center;
-									width: 100%;
+									padding: 0 10px;
 								}
 
 								.panel .body .properties .user-form .skill-box .title-container .skill-title:hover {
@@ -448,6 +453,12 @@ nav {
 									display: flex;
 									gap: 5px;
 								}
+
+									.panel .body .properties .user-form .skill-box .order-list .order-block .dot {
+										display: flex;
+										align-items: flex-start;
+										padding-top: 1px;
+									}
 
 			.panel .body .properties .tool-container {
 				width: 270px;
