--- a/WCSTrainer/Pages/Accounts/Details.cshtml
+++ b/WCSTrainer/Pages/Accounts/Details.cshtml
@@ -11,7 +11,7 @@
             @if (Model.UserAccount != null) {
                <p class="title">User Account @Model.UserAccount.Id</p>
                @if (Model.Employee != null) {
-                  <p class="description">@Model.Employee.FirstName @Model.Employee.LastName</p>
+                  <p class="subtitle">@Model.Employee.FirstName @Model.Employee.LastName</p>
                }
                <div class="field-container">
                   <div class="title-row">
