--- a/WCSTrainer/Pages/TrainerGroups/Edit.cshtml
+++ b/WCSTrainer/Pages/TrainerGroups/Edit.cshtml
@@ -49,7 +49,7 @@
                                     }
                                  </ul>
                                  <div class="btn bg-btn btnWhite" onclick="openComponent('trainer')">
-                                    <p>Select Trainers</p>
+                                    <p>Select</p>
                                  </div>
                                  <input id="trainerInput" asp-for="@Model.SelectedTrainerString" type="hidden" />
                               </div>
