--- a/WCSTrainer/Pages/Shared/RazorComponents/Person.razor
+++ b/WCSTrainer/Pages/Shared/RazorComponents/Person.razor
@@ -28,31 +28,29 @@
             @foreach (var skill in employee.Skills) {
                <div class="skill-box">
                   <div class="title-container">
-                     <a href="/Skills/Details?id=@skill.Id" class="skill-title">@skill.Name</a>
+                     <a href="/Skills/Details?id=@skill.Id" class="skill-title">@skill.Name @skill.Id</a>
                   </div>
-                  @if (skill.TrainingOrders.Count > 0) {
-                     <div class="order-list">
-                        @foreach (var order in employee.TrainingOrdersAsTrainee.OrderBy(o => o.Archived || o.Status != "Active")) {
-                           var cssClass = order.Archived ? "pill inactive" : "pill";
-                           if (order.ParentSkillId == skill.Id) {
-                              <div class="order-block">
-                                 <a href="/TrainingOrders/Details?id=@order.Id" class="@cssClass">TO #@order.Id</a>
-                                 @{
-                                    var type = "awaiting";
-                                    if (order.Status.Equals("Active")) {
-                                       type = "active";
-                                    } else if (order.Status.Equals("Verified")) {
-                                       type = "verified";
-                                    } else if (order.Status.Equals("Completed")) {
-                                       type = "completed";
-                                    }
-                                    <p class="@type dot">⬤</p>
+                  <div class="order-list">
+                     @foreach (var order in employee.TrainingOrdersAsTrainee) {
+                        var cssClass = order.Archived ? "pill inactive" : "pill";
+                        if (order.ParentSkillId == skill.Id) {
+                           <div class="order-block">
+                              <a href="/TrainingOrders/Details?id=@order.Id" class="@cssClass">TO #@order.Id</a>
+                              @{
+                                 var type = "awaiting";
+                                 if (order.Status.Equals("Active")) {
+                                    type = "active";
+                                 } else if (order.Status.Equals("Verified")) {
+                                    type = "verified";
+                                 } else if (order.Status.Equals("Completed")) {
+                                    type = "completed";
                                  }
-                              </div>
-                           }
+                                 <p class="@type dot">⬤</p>
+                              }
+                           </div>
                         }
-                     </div>
-                  }
+                     }
+                  </div>
                </div>
             }
          </div>
@@ -62,7 +60,7 @@
       <p class="title">Assigned Learning</p>
       <div class="info">
          @foreach (var order in employee.TrainingOrdersAsTrainee.OrderBy(o => o.Archived || o.Status != "Active")) {
-            var cssClass = order.Archived || order.Status != "Active" ? "pill inactive" : "pill";
+            var cssClass = order.Archived ? "pill inactive" : "pill";
             if (order.ParentSkill == null) {
                <a href="/TrainingOrders/Details?id=@order.Id" class="@cssClass">TO #@order.Id</a>
             }
@@ -73,7 +71,7 @@
       <p class="title">Assigned Teaching</p>
       <div class="info">
          @foreach (var order in employee.TrainingOrdersAsTrainer.OrderBy(o => o.Archived || o.Status != "Active")) {
-            var cssClass = order.Archived || order.Status != "Active" ? "pill inactive" : "pill";
+            var cssClass = order.Archived ? "pill inactive" : "pill";
             <a href="/TrainingOrders/Details?id=@order.Id" class="@cssClass">TO #@order.Id</a>
          }
       </div>
