--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -79,7 +79,7 @@
                                  <div class="sub">
                                     <div class="sub-text">
                                        @if (item.ParentSkill != null) {
-                                          <p class="skill-name">@item.ParentSkill.Name</p>
+                                          <a class="skill-name" href="/Skills/Details?id=@item.ParentSkill.Id">@item.ParentSkill.Name</a>
                                        }
                                        <p class="identifier">Trainee - @name</p>
                                     </div>
