--- a/WCSTrainer/Pages/Shared/_Sidebar.cshtml
+++ b/WCSTrainer/Pages/Shared/_Sidebar.cshtml
@@ -9,6 +9,7 @@
       ("Skills", "Skills"),
       ("TrainerGroups", "Trainer Groups"),
       ("Locations", "Locations"),
+      ("Employees", "Employees"),
       ("Accounts", "User Accounts"),
    };
 }
