--- a/WCSTrainer/Pages/Skills/Details.cshtml
+++ b/WCSTrainer/Pages/Skills/Details.cshtml
@@ -37,7 +37,7 @@
                            }
                         }
                         if (isActive) {
-                           <a href="/Accounts/Employees/Details?id=@person.Id" class="pill">@person.FirstName @person.LastName</a>
+                           <a href="/Employees/Details?id=@person.Id" class="pill">@person.FirstName @person.LastName</a>
                         }
                      }
                   </div>
@@ -55,7 +55,7 @@
                            }
                         }
                         if (!isActive) {
-                           <a href="/Accounts/Employees/Details?id=@person.Id" class="pill">@person.FirstName @person.LastName</a>
+                           <a href="/Employees/Details?id=@person.Id" class="pill">@person.FirstName @person.LastName</a>
                         }
                      }
                   </div>
