--- a/WCSTrainer/Pages/Accounts/Details.cshtml
+++ b/WCSTrainer/Pages/Accounts/Details.cshtml
@@ -33,7 +33,7 @@
                   @if (Model.Employee != null) {
                      <component type="typeof(Person)" render-mode="WebAssemblyPrerendered" param-EmployeeId="@Model.Employee.Id" />
                      <div class="btn-container">
-                        <a class="btn bg-btn btnGreen" asp-page="./Employees/Edit" asp-route-id="@Model.UserAccount.EmployeeId">
+                        <a class="btn bg-btn btnGreen" asp-page="/Employees/Edit" asp-route-id="@Model.UserAccount.EmployeeId">
                            Edit Info
                         </a>
                      </div>
