--- a/WCSTrainer/Pages/Skills/Index.cshtml
+++ b/WCSTrainer/Pages/Skills/Index.cshtml
@@ -19,23 +19,21 @@
                <ul>
                   @foreach (var item in Model.Skills.Reverse()) {
                      if (Model.listCount < Model.maxCount) {
-                        <li id="@item.Id @item.Name" class="searchable">
+                        <li id="@item.Id @item.Name" class="archived searchable">
                            <div class="info">
                               <div class="title">
-                                 <a class="name" asp-page="./Details" asp-route-id="@item.Id">Skill #@item.Id</a>
+                                 <a class="name unarchived" asp-page="./Details" asp-route-id="@item.Id">Skill #@item.Id</a>
                               </div>
                               <div class="sub">
                                  <div class="sub-text">
                                     <p class="identifier">@item.Name</p>
                                  </div>
-                                 <div class="btns">
-                                    <a class="btn bg-btn btnGreen" asp-page="./Assign" asp-route-id="@item.Id">Assign</a>
-                                    <a class="btn bg-btn btnWhite" asp-page="./Details" asp-route-id="@item.Id">View</a>
-                                    <a class="btn bg-btn btnRed" asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
-                                 </div>
                               </div>
                            </div>
-                           
+                           <div class="btns">
+                              <a class="btn bg-btn btnGreen" asp-page="./Assign" asp-route-id="@item.Id">Assign</a>
+                              <a class="btn bg-btn btnRed" asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                           </div>
                         </li>
                         Model.listCount++;
                      }
