--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -55,44 +55,44 @@
                            } else {
                               name = "N/A";
                            }
-                           <li id="@item.Id" class="@item.Status @(item.Archived ? "Archived" : "") searchable"
+                           var type = "awaiting";
+                           if (item.Status.Equals("Active")) {
+                              type = "active";
+                           } else if (item.Status.Equals("Verified")) {
+                              type = "verified";
+                           } else if (item.Status.Equals("Completed")) {
+                              type = "completed";
+                           }
+                           <li id="@item.Id" class="@type @item.Status @(item.Archived ? "Archived" : "") searchable"
                                data-name="@name" style="display: @(itemCount < Model.maxCount ? "flex" : "none");">
                               <div class="info">
                                  <div class="title">
-                                    <a class="name" asp-page="./Details" asp-route-id="@item.Id">Training Order #@item.Id</a>
-
                                     @{
-                                       var type = "awaiting";
-                                       if (item.Status.Equals("Active")) {
-                                          type = "active";
-                                       } else if (item.Status.Equals("Verified")) {
-                                          type = "verified";
-                                       } else if (item.Status.Equals("Completed")) {
-                                          type = "completed";
-                                       }
-                                       <p class="@type black-pill">@item.Status</p>
                                        if (item.Archived == true) {
-                                          <p class="archived black-pill">Archived</p>
+                                          <a class="name archived" asp-page="./Details" asp-route-id="@item.Id">Training Order #@item.Id</a>
+                                       } else {
+                                          <a class="name unarchived" asp-page="./Details" asp-route-id="@item.Id">Training Order #@item.Id</a>
+                                       }
+                                       
+                                       if (item.ParentSkill != null) {
+                                          <a class="skill-name black-pill" href="/Skills/Details?id=@item.ParentSkill.Id">@item.ParentSkill.Name</a>
                                        }
                                     }
                                  </div>
                                  <div class="sub">
                                     <div class="sub-text">
-                                       @if (item.ParentSkill != null) {
-                                          <a class="skill-name" href="/Skills/Details?id=@item.ParentSkill.Id">Skill - @item.ParentSkill.Name</a>
-                                       }
                                        <p class="identifier">Trainee - @name</p>
                                     </div>
-                                    <div class="btns">
-                                       <a class="btn bg-btn btnWhite" asp-page="./Details" asp-route-id="@item.Id">View</a>
-                                       @{
-                                          var isOwner = await UserManager.IsInRoleAsync(user, "owner");
-                                          if (isOwner) {
-                                             <a class="btn bg-btn btnRed" onclick="openModal(@item.Id)">Delete</a>
-                                          }
-                                       }
-                                    </div>
+                                    
                                  </div>
+                              </div>
+                              <div class="btns">
+                                 @{
+                                    var isOwner = await UserManager.IsInRoleAsync(user, "owner");
+                                    if (isOwner) {
+                                       <a class="btn bg-btn btnRed" onclick="openModal(@item.Id)">Delete</a>
+                                    }
+                                 }
                               </div>
                            </li>
                            itemCount++;
