--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -609,10 +609,13 @@ nav {
 				flex-direction: column;
 				flex-grow: 1;
 				max-height: 750px;
+				gap: 10px;
 			}
 
 				.panel .body .properties .list-container .top {
-					border-bottom: 1px solid var(--gray4);
+					border: 1px solid var(--gray4);
+					background-color: var(--gray1);
+					border-radius: 5px;
 					padding: 8px;
 				}
 
@@ -626,29 +629,27 @@ nav {
 
 					.panel .body .properties .list-container .order-list ul {
 						list-style: none;
+						display: flex;
+						flex-direction: column;
+						gap: 5px;
 					}
 
 					.panel .body .properties .list-container .order-list li {
-						margin-right: 20px;
-						border-bottom: 1px solid var(--gray3);
 						display: flex;
-						flex-direction: row;
-						justify-content: space-between;
-						align-items: center;
-						width: 100%;
-						padding: 5px 0;
-						
+						padding: 5px 10px;
+						border-left: 3px solid;
+						border-radius: 3px;
+						background-color: var(--gray2);
 					}
 
 						.panel .body .properties .list-container .order-list li:hover {
 						}
 
 						.panel .body .properties .list-container .order-list li .info {
-							margin-left: 10px;
-							width: 100%;
 							display: flex;
 							flex-direction: column;
 							text-decoration: none;
+							flex-grow: 1;
 						}
 
 							.panel .body .properties .list-container .order-list li .info .title {
@@ -663,7 +664,6 @@ nav {
 							}
 
 								.panel .body .properties .list-container .order-list li .info .title .name {
-									color: var(--textMain);
 									text-decoration: none;
 									cursor: pointer;
 									user-select: none;
@@ -685,26 +685,26 @@ nav {
 									color: var(--textSub2);
 								}
 
-								.panel .body .properties .list-container .order-list li .info .sub .skill-name {
+								.panel .body .properties .list-container .order-list li .info .skill-name {
 									color: var(--textSub1);
 									text-decoration: none;
 								}
 
-								.panel .body .properties .list-container .order-list li .info .sub .skill-name:hover {
+								.panel .body .properties .list-container .order-list li .info .skill-name:hover {
 									text-decoration: underline;
 								}
 
-								.panel .body .properties .list-container .order-list li .info .sub .btns {
-									display: flex;
-									gap: 5px;
-									align-self: flex-end;
-								}
+						.panel .body .properties .list-container .order-list li .btns {
+							display: flex;
+							gap: 5px;
+							align-items: center;
+						}
 
-									.panel .body .properties .list-container .order-list li .info .sub .btns .btn {
-										padding: 4px 10px;
-										font-size: 13px;
-										height: fit-content;
-									}
+							.panel .body .properties .list-container .order-list li .btns .btn {
+								padding: 4px 10px;
+								font-size: 13px;
+								height: fit-content;
+							}
 
 								
 
