--- a/WCSTrainer/Pages/Shared/RazorComponents/Person.razor
+++ b/WCSTrainer/Pages/Shared/RazorComponents/Person.razor
@@ -45,7 +45,7 @@
                                  } else if (order.Status.Equals("Completed")) {
                                     type = "completed";
                                  }
-                                 <p class="@type dot">⬤</p>
+                                 <p class="@type dot" title="@order.Status">⬤</p>
                               }
                            </div>
                         }
