--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -111,25 +111,25 @@
                </div>
                <div class="selections">
                   <p class="section-title">Show in List:</p>
-                  <div class="section">
+                  <div class="section archived">
+                     <p class="section-info archived">Archived</p>
                      <input type="checkbox" id="Archived" onchange="checkedBox(this)" />
-                     <p class="section-info black-pill archived">Archived</p>
                   </div>
-                  <div class="section">
+                  <div class="section verified">
+                     <p class="section-info verified">Verified</p>
                      <input type="checkbox" checked id="Verified" onchange="checkedBox(this)" />
-                     <p class="section-info black-pill verified">Verified</p>
                   </div>
-                  <div class="section">
+                  <div class="section completed">
+                     <p class="section-info completed">Completed</p>
                      <input type="checkbox" checked id="Completed" onchange="checkedBox(this)" />
-                     <p class="section-info black-pill completed">Completed</p>
                   </div>
-                  <div class="section">
+                  <div class="section active">
+                     <p class="section-info active">Active</p>
                      <input type="checkbox" checked id="Active" onchange="checkedBox(this)" />
-                     <p class="section-info black-pill active">Active</p>
                   </div>
-                  <div class="section">
+                  <div class="section awaiting">
+                     <p class="section-info awaiting">Awaiting Approval</p>
                      <input type="checkbox" checked id="Awaiting Approval" onchange="checkedBox(this)" />
-                     <p class="section-info black-pill awaiting">Awaiting Approval</p>
                   </div>
                </div>
                <div class="btns">
