--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -240,7 +240,6 @@ nav {
 					margin-top: 20px;
 					display: flex;
 					width: 100%;
-					max-width: 800px;
 				}
 
 				.panel .body .properties .user-form .btn-container {
@@ -412,12 +411,17 @@ nav {
 					}
 
 						.panel .body .properties .user-form .field-container .text-group .info .description-container {
+							width: 100%;
 							font-size: 16px;
 						}
 
 						.panel .body .properties .user-form .field-container .text-group .info .description-link {
 							color: var(--blue1);
 							width: fit-content;
+						}
+
+						.panel .body .properties .user-form .field-container .text-group .info .description-video {
+							display: flex;
 						}
 
 					.panel .body .properties .user-form .field-container .text-group .info .skills-container {
@@ -474,6 +478,7 @@ nav {
 										display: flex;
 										align-items: flex-start;
 										padding-top: 1px;
+										cursor: pointer;
 									}
 
 			.panel .body .properties .tool-container {
@@ -532,11 +537,8 @@ nav {
 					}
 
 						.panel .body .properties .tool-container .tools .btn {
-							padding: 5px 10px;
-							text-align: center;
+							padding: 5px 0;
 							display: flex;
-							align-items: center;
-							font-size: 15px;
 						}
 
 					.panel .body .properties .tool-container .tools .search {
@@ -567,25 +569,30 @@ nav {
 						}
 
 					.panel .body .properties .tool-container .tools .selections {
+						display: flex;	
+						flex-direction: column;
 						margin-bottom: 20px;
+						gap: 10px;
 					}
 
 						.panel .body .properties .tool-container .tools .selections .section {
-							margin-top: 10px;
 							display: flex;
 							justify-content: flex-start;
 							align-items: center;
+							justify-content: space-between;
+							border-bottom: 1px solid;
+							font-size: 15px;
 						}
 
 							.panel .body .properties .tool-container .tools .selections .section input {
-								color: black;
+								color: red;
+								background-color: red;
 							}
 
-								.panel .body .properties .tool-container .tools .selections .section input:checked {
-								}
-
 						.panel .body .properties .tool-container .tools .selections .section-info {
-							margin-left: 7px;
+							display: flex;
+							flex-grow: 1;
+							
 						}
 
 					.panel .body .properties .tool-container .tools .info {
