--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -111,23 +111,23 @@
                </div>
                <div class="selections">
                   <p class="section-title">Show in List:</p>
-                  <div class="section archived">
+                  <div class="section">
                      <p class="section-info archived">Archived</p>
                      <input type="checkbox" id="Archived" onchange="checkedBox(this)" />
                   </div>
-                  <div class="section verified">
+                  <div class="section">
                      <p class="section-info verified">Verified</p>
                      <input type="checkbox" checked id="Verified" onchange="checkedBox(this)" />
                   </div>
-                  <div class="section completed">
+                  <div class="section">
                      <p class="section-info completed">Completed</p>
                      <input type="checkbox" checked id="Completed" onchange="checkedBox(this)" />
                   </div>
-                  <div class="section active">
+                  <div class="section">
                      <p class="section-info active">Active</p>
                      <input type="checkbox" checked id="Active" onchange="checkedBox(this)" />
                   </div>
-                  <div class="section awaiting">
+                  <div class="section">
                      <p class="section-info awaiting">Awaiting Approval</p>
                      <input type="checkbox" checked id="Awaiting Approval" onchange="checkedBox(this)" />
                   </div>
