--- a/WCSTrainer/wwwroot/css/colors.css
+++ b/WCSTrainer/wwwroot/css/colors.css
@@ -5,6 +5,7 @@
 	--gray2: #1b2022;
 	--gray3: #252a2e;
 	--gray4: #45494e;
+	--gray5: #5e6369;
 	--textMain: white;
 	--textSub1: #a0a9b4;
 	--textSub2: #787f87;
@@ -29,6 +30,7 @@
 	--gray2: #b2b2b2;
 	--gray3: #b2b2b2;
 	--gray4: #000000;
+	--gray5: #000000;
 	--textMain: #000000;
 	--textSub1: #000000;
 	--textSub2: #000000;
